--- a/app/src/main/res/layout/item_category_image.xml
+++ b/app/src/main/res/layout/item_category_image.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/ctnCategoryItem"
+    android:id="@+id/ctnCategoryImageItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/category_1"
@@ -9,7 +9,7 @@
 
 
     <ImageView
-        android:id="@+id/imgCategoryItem"
+        android:id="@+id/imgCategoryImageItem"
         android:src="@drawable/ic_category_1"
         android:layout_margin="16dp"
         android:cropToPadding="true"
