--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,15 @@
         <item name="layout_constraintRight_toRightOf">parent</item>
         <item name="layout_constraintTop_toTopOf">parent</item>
     </style>
+
+    <style name="Body" parent="MainText">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Body.Gray" parent="Body">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/gray</item>
+    </style>
+
+    <color name="gray">#5A6978</color>
 </resources>
