--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,5 @@
     <color name="category_3">#E5BA93</color>
     <color name="category_4">#9677C0</color>
     <color name="category_5">#4A8FB4</color>
-    <color name="text_delete_flash">#4C5763</color>
-
+    <color name="dark_brown">#4C5763</color>
 </resources>
