--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,7 @@
     <color name="category_4">#9677C0</color>
     <color name="category_5">#4A8FB4</color>
     <color name="dark_brown">#4C5763</color>
+    <color name="gray">#5A6978</color>
+    <color name="brown">#FF442C2E</color>
+
 </resources>
