create new category flow

--- a/app/src/main/res/layout/fragment_category_create.xml
+++ b/app/src/main/res/layout/fragment_category_create.xml
@@ -37,7 +37,9 @@
         app:layout_constraintTop_toBottomOf="@+id/text_input_layout">
 
         <ImageView
+            android:id="@+id/imgCreateCategory"
             android:layout_width="0dp"
+            android:padding="@dimen/size_2"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:contentDescription="@null"
@@ -55,6 +57,7 @@
     </LinearLayout>
 
     <Button
+        android:id="@+id/btnSaveCategory"
         style="@style/Button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
