fetching flashcard by category id

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="size_1">8dp</dimen>
     <dimen name="size_2">16dp</dimen>
+    <dimen name="size_3">24dp</dimen>
 </resources>
